CDS cannot load archived heap objects with -XX:+UseSerialGC -XX:-UseCompressedOops

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 24
    • Affects Version/s: None
    • Component/s: hotspot
    • b22

      Since JDK-8298614, it's possible to write the archived heap region with -XX:+UseSerialGC -XX:-UseCompressedOops, but you can't load this heap region at run time.

      $ java -Xshare:dump -XX:+UseSerialGC -XX:-UseCompressedOops
      $ java -Xshare:on -Xlog:cds -XX:+UseSerialGC -XX:-UseCompressedOops --version
      [0.168s][info][cds] trying to map /jdk3/bld/yap-fastdebug/images/jdk/lib/server/classes_nocoops.jsa
      [0.168s][info][cds] Opened archive /jdk3/bld/yap-fastdebug/images/jdk/lib/server/classes_nocoops.jsa.
      [0.168s][info][cds] Archive was created with UseCompressedOops = 0, UseCompressedClassPointers = 1
      [0.168s][info][cds] Core region alignment: 4096
      [0.168s][info][cds] Reserved archive_space_rs [0x0000000800000000 - 0x0000000801000000] (16777216) bytes
      [0.168s][info][cds] Reserved class_space_rs [0x0000000801000000 - 0x0000000841000000] (1073741824) bytes
      [0.168s][info][cds] Mapped static region #0 at base 0x0000000800000000 top 0x0000000800598000 (ReadWrite)
      [0.168s][info][cds] Mapped static region #1 at base 0x0000000800598000 top 0x0000000800e94000 (ReadOnly)
      [0.168s][info][cds] ArchiveRelocationMode == 1: always map archive(s) at an alternative address
      [0.168s][info][cds] Unmapping region #0 at base 0x0000000800000000 (ReadWrite)
      [0.168s][info][cds] Unmapping region #1 at base 0x0000000800598000 (ReadOnly)
      [0.168s][info][cds] Try to map archive(s) at an alternative address
      [0.168s][info][cds] Reserved archive_space_rs [0x00007fb3c1000000 - 0x00007fb3c2000000] (16777216) bytes
      [0.168s][info][cds] Reserved class_space_rs [0x00007fb3c2000000 - 0x00007fb402000000] (1073741824) bytes
      [0.168s][info][cds] Mapped static region #0 at base 0x00007fb3c1000000 top 0x00007fb3c1598000 (ReadWrite)
      [0.168s][info][cds] Mapped static region #1 at base 0x00007fb3c1598000 top 0x00007fb3c1e94000 (ReadOnly)
      [0.168s][info][cds] Mapped static region #2 at base 0x00007fb6103b7000 top 0x00007fb6103ee000 (Bitmap)
      [0.175s][info][cds] CDS archive was created with max heap size = 4096M, and the following configuration:
      [0.175s][info][cds] narrow_klass_base at mapping start address, narrow_klass_shift = 0
      [0.175s][info][cds] narrow_oop_mode = 0, narrow_oop_base = 0x0000000000000000, narrow_oop_shift = 0
      [0.175s][info][cds] The current max heap size = 7960M, G1HeapRegion::GrainBytes = 0
      [0.175s][info][cds] narrow_klass_base = 0x00007fb3c1000000, narrow_klass_shift = 0
      [0.175s][info][cds] narrow_oop_mode = 0, narrow_oop_base = 0x0000000000000000, narrow_oop_shift = 0
      [0.175s][info][cds] heap range = [0x0000000000000000 - 0x0000000000000000]
      [0.175s][info][cds] Cannot use CDS heap data. UseG1GC is required for -XX:-UseCompressedOops <<<<<<<<<<<<< HERE
      [0.175s][info][cds] initial optimized module handling: enabled
      [0.175s][info][cds] initial full module graph: disabled
      [0.175s][info][cds] _archived_main_module_name (null)
      [0.175s][info][cds] optimized module handling: enabled
      [0.175s][info][cds] full module graph: disabled
      [0.175s][info][cds] Unmapping region #2 at base 0x00007fb6103b7000 (Bitmap)
      [0.175s][info][cds] Using AOT-linked classes: false (static archive: no aot-linked classes)
      java 24-internal 2025-03-18
      Java(TM) SE Runtime Environment (fastdebug build 24-internal-adhoc.iklam.yap)
      JavaHotSpot(TM) 64-Bit Server VM (fastdebug build 24-internal-adhoc.iklam.yap, mixed mode, sharing)

            Assignee:
            Matias Saavedra Silva
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: