8341371: CDS cannot load archived heap objects with -XX:+UseSerialGC -XX:-UseCompressedOops